# citationberg

./: .gitignore  Cargo.toml  LICENSE-APACHE  NOTICE  README.md
.github/workflows/: ci.yml
crates/citationberg/: Cargo.toml
crates/citationberg/src/: lib.rs  taxonomy.rs
crates/macros/: Cargo.toml
src/: json.rs  lib.rs  taxonomy.rs  util.rs
tests/: entry.json
tests/independent/: chicago-fullnote-bibliography.csl
tests/locales/: locales-en-US.xml
