[package]
name = "citationberg"
version = "0.1.0"
authors = ["Martin Haug <mhaug@live.de>"]
license = "MIT OR Apache-2.0"
description = "Read and process CSL files"
repository = "https://github.com/typst/citationberg"
readme = "README.md"
categories = ["database", "parser-implementations", "text-processing"]
keywords = ["csl", "bibliography", "citation"]
edition = "2021"

[dependencies]
serde = "1"
