[package]
name = "citationberg"
version = "0.1.0"
authors = ["Martin Haug <mhaug@live.de>"]
license = "MIT OR Apache-2.0"
description = "Read and process CSL files"
repository = "https://github.com/typst/citationberg"
readme = "README.md"
categories = ["parser-implementations", "text-processing"]
keywords = ["csl", "bibliography", "citation"]
edition = "2021"

[features]
default = ["ciborium"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = {version="0.28", features = ["serialize", "overlapped-lists"]}
ciborium = { version = "0.2.1", optional = true }

[dev-dependencies]
serde_path_to_error = "0.1"