[package]
name = "citationberg"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = {version="0.28", features = ["serialize"]}

[dev-dependencies]
serde_path_to_error = "0.1"