[package]
name = "citationberg-macros"
description = "Proc-macros for citationberg."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true
test = false
doctest = false
bench = false

[dependencies]
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
